syntax = "proto3";

import "common.proto";

option csharp_namespace = "PostPigeon.Server";

package chatroom;

service Chatroom {
  rpc SendMessage (MessageRequest) returns (common.None);
  rpc ReceiveMessages (common.None) returns (stream MessageResponse);
  rpc GetUsers (common.None) returns (stream UserList);
}

message MessageRequest {
  string user_id = 1;
  string text_message = 2;
}

message MessageResponse {
  string sender_id = 1;
  string text_message = 2;
}

enum UserStatus {
  UNKNOWN = 0;
  ONLINE = 1;
  OFFLINE = 2;
}
message UserResponse {
  string id = 1;
  string name = 2;
  UserStatus status = 3;
  string avatar = 4;
}

message UserList {
  repeated UserResponse users = 1;
}

message ReceiveRequest {
  string user = 1;
}
